<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context=".MainActivity">

    <Button
            android:layout_width="match_parent"
            android:text="@string/move_activity"
            android:id="@+id/btn_move"
            android:layout_height="wrap_content"/>
    <EditText
            android:id="@+id/edt_nama"
            android:hint="@string/masukkan_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <Button
            android:layout_width="match_parent"
            android:text="@string/move_data"
            android:id="@+id/btn_move_data"
            android:layout_height="wrap_content"/>
    <Button
            android:layout_width="match_parent"
            android:text="@string/call_activity"
            android:id="@+id/btn_call"
            android:layout_height="wrap_content"/>
    <Button
            android:layout_width="match_parent"
            android:text="@string/browser_activity"
            android:id="@+id/btn_browser"
            android:layout_height="wrap_content"/>

    <Button
            android:layout_width="match_parent"
            android:text="@string/sms_activity"
            android:id="@+id/btn_sms"
            android:layout_height="wrap_content"/>

</LinearLayout>