<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_height="match_parent"
        tools:context=".SmsActivity">

    <EditText
            android:id="@+id/edtmessage"
            android:maxLength="160"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputkan_pesan"
            android:lines="5"
            android:inputType="textMultiLine"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background"
            android:gravity="top"
    />
    <EditText
            android:id="@+id/edt_nomor"
            android:maxLength="160"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/masukkan_nomor"
            android:lines="1"
            android:inputType="textMultiLine"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/editbox_background"
            android:gravity="top"
    />

    <Button
            android:id="@+id/btn_kirim"
            android:text="@string/kirim"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


</LinearLayout>